backend/api/tests/integration/snapshots/integration__user__browse_user_badges-2.snap
---
source: tests/integration/user.rs
expression: body
---
{
  "users": [
    {
      "id": "1f241e1b-b537-493f-a230-075cb16315be",
      "username": "test",
      "givenName": "Bobby",
      "familyName": "Tables",
      "email": "test@test.test",
      "country": null,
      "state": null,
      "city": null,
      "organization": "test org",
      "createdAt": "2020-08-09",
      "language": "en",
      "badge": "jiTeam",
      "planType": null,
      "subscriptionStatus": null,
      "isTrial": null,
      "currentPeriodEnd": null,
      "amountDueInCents": null,
      "isAdmin": null,
      "schoolName": null
    }
  ],
  "pages": 1,
  "totalUserCount": 1
}
