backend/api/tests/integration/snapshots/integration__user__get_profile.snap
---
source: tests/integration/user.rs
expression: body

---
{
  "id": "1f241e1b-b537-493f-a230-075cb16315be",
  "username": "test",
  "email": "test@test.test",
  "is_oauth": false,
  "given_name": "Bobby",
  "family_name": "Tables",
  "profile_image": null,
  "language": "en_US",
  "locale": "en_US",
  "opt_into_edu_resources": true,
  "over_18": true,
  "timezone": "US/Pacific",
  "bio": "",
  "location_public": false,
  "organization_public": false,
  "persona_public": false,
  "language_public": false,
  "bio_public": false,
  "scopes": [
    "Admin"
  ],
  "created_at": "2020-08-08T00:11:21Z",
  "organization": "test org"
}
