backend/api/tests/integration/snapshots/integration__user__patch_profile.snap
---
source: tests/integration/user.rs
expression: body
---
{
  "id": "1f241e1b-b537-493f-a230-075cb16315be",
  "username": "test_user",
  "email": "test@test.test",
  "is_oauth": false,
  "given_name": "name",
  "family_name": "nameson",
  "profile_image": null,
  "language_app": "en",
  "language_emails": "en",
  "languages_spoken": [
    "en",
    "he"
  ],
  "opt_into_edu_resources": false,
  "over_18": true,
  "timezone": "US/Pacific",
  "bio": "a test user",
  "badge": "jiTeam",
  "location_public": true,
  "organization_public": true,
  "persona_public": true,
  "languages_spoken_public": true,
  "bio_public": true,
  "scopes": [
    "Admin"
  ],
  "created_at": "2020-08-08T00:11:21Z",
  "updated_at": "[timestamptz]",
  "persona": [
    "persona"
  ],
  "jig_count": 0,
  "resource_count": 0,
  "course_count": 0,
  "playlist_count": 0,
  "total_asset_count": 0,
  "account_summary": {
    "school_id": null,
    "school_name": null,
    "plan_type": null,
    "plan_tier": "Free",
    "subscription_status": null,
    "is_admin": true,
    "overdue": false,
    "verified": true
  }
}
