backend/api/tests/integration/snapshots/integration__user__post_profile.snap
---
source: tests/integration/user.rs
expression: body

---
{
  "code": 501,
  "message": "S3 is disabled"
}
